@@ -234,16 +234,12 @@ gchar *s = N_("Clone the current Teletext window");
 gchar *s = N_("Search for a given pattern in the cache");
 gchar *s = N_("Search");
 gchar *s = N_("100");
-gchar *s = N_("Previous subpage in the cache [Left]");
-gchar *s = N_("<<");
 gchar *s = N_("Previous subpage [-]");
 gchar *s = N_("<");
 gchar *s = N_("Hold the current subpage [H]");
 gchar *s = N_("S0");
 gchar *s = N_("Next subpage [+]");
 gchar *s = N_(">");
-gchar *s = N_("Next subpage in the cache [Right]");
-gchar *s = N_(">>");
 gchar *s = N_("Reveal hidden characters [R]");
 gchar *s = N_("R");
 gchar *s = N_("Exit TTX mode [Esc]");
